--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <div class="form-container">
   <!-- HYBE Logo -->
-  <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/HYBE_Corporation_Logo.png" alt="HYBE Logo">
+  <img src="https://i.ibb.co/sppMqFZ0/IMG-0286.png">
 
   <h2>HYBE Fan Permit Subscription 2025/2026</h2>
 
