--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HYBE Fan Permit Subscription 2025/2026</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #f9fafb, #e0e3e7);
+      background: linear-gradient(to bottom right, #f1f3f5, #e2e6ea);
       padding: 20px;
       animation: fadeIn 1s ease;
     }
 
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
 
     .form-container {
       background: white;
@@ -22,24 +27,60 @@
       margin: auto;
       padding: 40px;
       border-radius: 20px;
-      box-shadow: 0 12px 24px rgba(0,0,0,0.08);
-      transition: all 0.4s ease;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.08);
+      animation: fadeIn 1s ease;
     }
 
-    .form-container img {
+    .logo {
       display: block;
-      max-width: 150px;
-      margin: 0 auto 10px;
+      max-width: 160px;
+      margin: 0 auto 20px;
+      animation: fadeInLogo 2s ease;
     }
 
-    h2, h4 {
+    @keyframes fadeInLogo {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    h2 {
       text-align: center;
+      font-size: 2em;
+      background: linear-gradient(to right, #007bff, #00bcd4);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 700;
       margin-bottom: 10px;
     }
 
-    h4 {
-      font-weight: 300;
+    .subheading {
+      text-align: center;
+      font-style: italic;
       color: #555;
+      margin-bottom: 30px;
+      font-size: 1rem;
+      animation: fadeIn 1.5s ease;
+    }
+
+    .benefits {
+      margin-bottom: 30px;
+      color: #333;
+    }
+
+    .benefits li {
+      list-style: none;
+      margin-bottom: 10px;
+      position: relative;
+      padding-left: 25px;
+      font-size: 15px;
+    }
+
+    .benefits li::before {
+      content: '\2713';
+      color: #28a745;
+      position: absolute;
+      left: 0;
+      top: 0;
     }
 
     label {
@@ -56,11 +97,12 @@
       border: 1px solid #ccc;
       border-radius: 8px;
       font-size: 15px;
-      transition: border-color 0.3s;
+      transition: all 0.3s;
     }
 
     input:focus, select:focus, textarea:focus {
       border-color: #007bff;
+      box-shadow: 0 0 5px rgba(0,123,255,0.5);
     }
 
     input[type="checkbox"] {
@@ -76,7 +118,9 @@
       font-size: 12px;
     }
 
-    .hidden { display: none; }
+    .hidden {
+      display: none;
+    }
 
     button {
       background: #007bff;
@@ -92,180 +136,105 @@
       transition: background 0.3s ease;
     }
 
-    button:hover { background: #0056b3; }
+    button:hover {
+      background: #0056b3;
+    }
 
     footer {
+      margin-top: 40px;
       text-align: center;
       padding: 20px;
       font-size: 13px;
-      color: #999;
-      background: #f1f3f5;
-      margin-top: 40px;
-      border-top: 1px solid #ddd;
-    }
-
-    footer a { color: #999; text-decoration: none; margin: 0 8px; }
-    footer a:hover { text-decoration: underline; }
-
-    #previewSelfie {
-      max-width: 100px;
-      margin-top: 10px;
-      border-radius: 8px;
+      color: #777;
+      background: #f8f9fa;
+      border-radius: 12px;
     }
   </style>
 </head>
 <body>
 
 <div class="form-container">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/HYBE_Corporation_Logo.png" alt="HYBE Logo">
-  <h2>HYBE Fan Permit Subscription 2025/2026</h2>
-  <h4>Become an Official HYBE Fan Member Today</h4>
+  <!-- HYBE Logo -->
+  <img src="https://i.ibb.co/sppMqFZ0/IMG-0286.png" alt="HYBE Logo" class="logo">
 
-  <form id="hybeForm" enctype="multipart/form-data">
+  <h2>HYBE Fan Permit Subscription</h2>
+  <p class="subheading">Join the exclusive HYBE Global Family. Unlock official fan privileges, early event access, and worldwide recognition.</p>
+
+  <ul class="benefits">
+    <li>Early access to concerts and events</li>
+    <li>Exclusive merchandise discounts</li>
+    <li>Fan-only global content and updates</li>
+    <li>Official certificate of global fan identity</li>
+  </ul>
+
+  <!-- Fan Preferences -->
     <label>Select HYBE Branch</label>
-    <select id="branchSelect" required onchange="loadGroups()">
+    <select id="branchSelect" name="Branch" required>
       <option value="">-- Select Branch --</option>
       <option value="BigHit">BigHit Music</option>
       <option value="HybeLabel">HYBE Labels</option>
     </select>
 
     <label>Select Your Favorite Group</label>
-    <select id="groupSelect" required onchange="loadArtists()">
+    <select id="groupSelect" name="Group" required>
       <option value="">-- Select Group --</option>
     </select>
 
     <label>Select Your Favorite Artist(s)</label>
-    <select id="artistSelect" required>
+    <select id="artistSelect" name="Artist" required>
       <option value="">-- Select Artist --</option>
     </select>
 
+    <!-- Payment -->
     <label>Annual Subscription Fee</label>
     <input type="text" value="$520/year" readonly>
 
     <label>Select Payment Type</label>
-    <select id="paymentType" required onchange="showInstallmentOptions()">
+    <select id="paymentType" name="PaymentType" required>
       <option value="">-- Select Payment Type --</option>
       <option value="full">Full Payment</option>
       <option value="installment">Installment</option>
     </select>
 
-    <div id="paymentSummary" class="hidden"></div>
-
     <div id="installmentOptions" class="hidden">
       <label>Select Installment Plan</label>
-      <select id="installmentPlan" onchange="showInstallmentCalc()">
+      <select id="installmentPlan" name="InstallmentPlan">
         <option value="">-- Select Installment Plan --</option>
         <option value="2">2 Installments ($260 each)</option>
         <option value="3">3 Installments ($173.33 each)</option>
       </select>
+      <p id="installmentCalc"></p>
     </div>
 
-    <div id="paymentMethods" class="hidden">
-      <label>Payment Methods</label>
-      <select required>
-        <option value="">-- Select Payment Method --</option>
-        <option value="crypto">Digital Currency</option>
-        <option value="card">Card Payment</option>
-      </select>
-    </div>
-
+    <!-- Country Autocomplete -->
     <label>What country do you live in?</label>
-    <input type="text" name="Country" list="countryList" required>
-    <datalist id="countryList">
-      <option value="USA">
-      <option value="South Korea">
-      <option value="Japan">
-      <option value="UK">
-      <option value="Australia">
-      <option value="Canada">
-    </datalist>
+    <input type="text" id="countryInput" name="Country" required class="awesomplete" autocomplete="off">
 
+    <!-- Live Selfie Upload -->
     <label>Upload Clear Live Selfie Picture</label>
-    <input type="file" accept="image/*" capture="user" required onchange="previewImage(event)">
-    <img id="previewSelfie" class="hidden"/>
+    <input type="file" id="selfieInput" name="Selfie" accept="image/*" capture="user" required>
+    <img id="preview" src="#" class="hidden" alt="Preview">
+    <small>Please take a live photo using your device camera (no pre-uploaded images allowed).</small>
 
+    <!-- Communication -->
     <label>Preferred Communication Method</label>
-    <input type="checkbox" value="Email" required> Email
-    <input type="checkbox" value="SMS" style="margin-left:20px;"> SMS
+    <input type="checkbox" name="PreferredCommunication" value="Email" required> Email
+    <input type="checkbox" name="PreferredCommunication" value="SMS" style="margin-left:20px;"> SMS
     <small>(You can select both)</small>
 
-    <input type="checkbox" id="agreeTerms" required>
-    <label for="agreeTerms">I have read and agree to HYBE’s Terms and Policies.</label>
+    <!-- Terms -->
+    <input type="checkbox" id="agreeTerms" name="AgreeTerms" required>
+    <label for="agreeTerms">I have read and agree to HYBE’s Privacy Policy and Terms.</label>
 
     <button type="submit">Complete Subscription</button>
   </form>
 </div>
 
+</div>
+
 <footer>
-  &copy; 2025 HYBE Corporation. All rights reserved. 
-  <a href="#">Privacy Policy</a>|
-  <a href="#">Terms of Service</a>
+  &copy; 2025 HYBE Corporation. All rights reserved.
 </footer>
-
-<script>
-const groups = {
-  "BigHit": ["BTS", "TXT"],
-  "HybeLabel": ["Seventeen", "Enhypen"]
-};
-
-const artists = {
-  "BTS": ["Jungkook", "Jin", "V", "Suga", "J-Hope", "RM", "Jimin"],
-  "TXT": ["Yeonjun", "Soobin", "Beomgyu", "Taehyun", "Hueningkai"],
-  "Seventeen": ["S.Coups", "Jeonghan", "Joshua", "Jun", "Hoshi", "Wonwoo"],
-  "Enhypen": ["Heeseung", "Jay", "Jake", "Sunghoon", "Sunoo", "Jungwon", "Ni-ki"]
-};
-
-function loadGroups() {
-  const branch = document.getElementById('branchSelect').value;
-  const groupSelect = document.getElementById('groupSelect');
-  groupSelect.innerHTML = `<option value="">-- Select Group --</option>`;
-  if (groups[branch]) {
-    groups[branch].forEach(group => {
-      groupSelect.innerHTML += `<option value="${group}">${group}</option>`;
-    });
-  }
-}
-
-function loadArtists() {
-  const group = document.getElementById('groupSelect').value;
-  const artistSelect = document.getElementById('artistSelect');
-  artistSelect.innerHTML = `<option value="">-- Select Artist --</option>`;
-  if (artists[group]) {
-    artists[group].forEach(artist => {
-      artistSelect.innerHTML += `<option value="${artist}">${artist}</option>`;
-    });
-  }
-}
-
-function showInstallmentOptions() {
-  const type = document.getElementById('paymentType').value;
-  document.getElementById('installmentOptions').classList.toggle('hidden', type !== 'installment');
-  document.getElementById('paymentMethods').classList.toggle('hidden', type === '');
-  document.getElementById('paymentSummary').classList.toggle('hidden', type === '');
-  if (type === 'full') {
-    document.getElementById('paymentSummary').innerText = "Total: $520";
-  } else {
-    document.getElementById('paymentSummary').innerText = "";
-  }
-}
-
-function showInstallmentCalc() {
-  const plan = document.getElementById('installmentPlan').value;
-  if (plan === '2') {
-    document.getElementById('paymentSummary').innerText = "2 Installments of $260";
-  } else if (plan === '3') {
-    document.getElementById('paymentSummary').innerText = "3 Installments of ~$173.33";
-  } else {
-    document.getElementById('paymentSummary').innerText = "";
-  }
-}
-
-function previewImage(event) {
-  const output = document.getElementById('previewSelfie');
-  output.src = URL.createObjectURL(event.target.files[0]);
-  output.classList.remove('hidden');
-}
-</script>
 
 </body>
 </html>
